Fix Camera positioning and flickering when screen is adjusting to device position

--- a/src/components/Camera/Camera.css
+++ b/src/components/Camera/Camera.css
@@ -1,8 +1,7 @@
 .videoContainer {
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: calc(var(--vw, 1vw) * 100);
+  max-height: calc(var(--vh, 1vh) * 100);
   text-align: center;
-  aspect-ratio: 4 / 3;
 }
 
 .videoContainer .videoContainer_media {
@@ -10,11 +9,10 @@
   width: 100%;
   object-fit: contain;
   object-position: center;
-  transform: scale(-1, 1);
+  /*transform: scale(-1, 1);*/
 }
 
 .loadingContainer {
-  aspect-ratio: 4 / 3;
   max-width: 100%;
   max-height: 100%;
   text-align: center;
